<resources>
    <string name="app_name">Music Notes</string>
    <string name="Color">color</string>
    <string name="Save">Save</string>
    <string name="lineWidth">Line Width</string>
    <string name="erase">Erase</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="set_width">Set Width</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="set_color">Set Color</string>

    <string name="newdir">New Directory</string>
    <string name="Record">Record</string>
    <string name="Note">Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Return to Menu</string>
    <string name="randomize">[randomize note type]</string>
    <string name="toggleDrawing">[toggle drawing]</string>
    <string name="set_text">Set Text</string>
    <string name="input_text">Input Text</string>
    <string name="preview">Preview:</string>
    <string name="size">Size:</string>
    <string name="drag_and_drop">Drag and drop</string>
    <string name="draw">Draw</string>
</resources>