<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Record"
        android:icon="@drawable/color_palette"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/clearId"
        android:title="@string/clear" />
    <item
        android:id="@+id/saveid"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/Save" />
    <item
        android:id="@+id/randomizeId"
        android:title="@string/randomize" />
    <item
        android:id="@+id/toggleDrawingId"
        android:title="@string/toggleDrawing" />
    <item
        android:id="@+id/textId"
        android:title="@string/input_text" />
    <item
        android:id="@+id/backId"
        android:title="@string/back" />
    <item
        android:id="@+id/Note"
        android:icon="@drawable/stroke_width"
        android:title="@string/lineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/undoId"
        android:icon="@drawable/undo_icon"
        android:title="@string/erase"
        app:showAsAction="always" />
</menu>