<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/sizeTextView"
        android:paddingTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size" />

    <SeekBar
        android:id="@+id/textSizeSeekBar"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="200" />

    <TextView
        android:id="@+id/previewTextView"
        android:paddingTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview" />

    <ImageView
        android:id="@+id/imageViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stroke_width" />

    <Button
        android:id="@+id/textDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_text" />

</LinearLayout>