<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_alpha" />

            <SeekBar
                android:id="@+id/alphaSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_red" />

            <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_green" />

            <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_blue" />

            <SeekBar
                android:id="@+id/blueSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <View
            android:id="@+id/colorView"
            android:layout_width="match_parent"
            android:layout_height="45dp">
        </View>
    </LinearLayout>

    <Button
        android:id="@+id/setColorButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>